maint: Fix too big font size on results page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ progress[value]::-webkit-progress-value { /* Thanks to https://css-tricks.com/ht
 }
 
 .score {
-    font-size: 32px;
+    font-size: 100%;
     color: #07080c;
     background-color: rgba(255,255,255,0.6);
     border-radius: 25px;
